--- a/index.html
+++ b/index.html
@@ -70,31 +70,31 @@
 										<h2><a href="#">Band reduction in multispectral images</h2>
 						
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/anassNasserallah/band-reduction-in-multispectral-images" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>This project aims to reduce a number of spectre of a huge multispectral image to 3 bands for viewing purpose using PCA. This process is called band reduction.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/anassNasserallah/band-reduction-in-multispectral-images" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Accuracy Improvement of SVM using MNIST dataset</h2>
+										<h2><a href="https://github.com/anassNasserallah/SVMaccuracyImprovement">Accuracy Improvement of SVM using MNIST dataset</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>I will describe a technique used in the paper of Burges and Schölkopf, they investigating a method to improve the accuracy and the speed of SVM using the MNIST dataset</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/anassNasserallah/SVMaccuracyImprovement" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										
-										<h2><a href="#">Anonymization methods</h2>
+										<h2><a href="https://github.com/anassNasserallah/K_anonymity">Anonymization methods</h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p> I describe and explain how we can anonymize our data to make it indistinguishable among a group record using different techniques like K_anonimity, L_diversity, T_closness.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/anassNasserallah/K_anonymity" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<!-- <article>
